<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ParticipantListFragment">


    <LinearLayout
        android:id="@+id/layoutCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_ten"
        android:layout_marginStart="@dimen/dp_ten"
        android:layout_marginTop="@dimen/dp_ten"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.CardView
            android:id="@+id/layoutMeetingID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="@dimen/dp_ten">

                <TextView
                    style="@style/cardHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_meetingID" />

                <TextView
                    android:id="@+id/textViewMeetingId"
                    style="@style/cardLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layoutUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_ten"
            android:layout_marginRight="@dimen/dp_ten"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:padding="@dimen/dp_ten">

                <TextView
                    style="@style/cardHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_username" />

                <TextView
                    android:id="@+id/textViewUserName"
                    style="@style/cardLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/layoutTotalMember"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/dp_ten">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dp_ten">

                <TextView
                    style="@style/cardHeaderStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_totalMember" />

                <TextView
                    android:id="@+id/textViewTotalMembers"
                    style="@style/cardLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/layoutCards"
        android:layout_marginEnd="@dimen/dp_ten"
        android:layout_marginStart="@dimen/dp_ten"
        android:layout_marginTop="@dimen/dp_fifteen"
        app:cardCornerRadius="@dimen/dp_ten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewParticipant"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_ten"></android.support.v7.widget.RecyclerView>
    </android.support.v7.widget.CardView>


</RelativeLayout>